[tool.poetry]
name = "stack-overflow-developer-survey-charts-2020"
version = "0.2.0"
description = ""
authors = ["Goto Hayato <gh640@hey.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
pandas = "^1.5.3"
matplotlib = "^3.6.3"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
